correction of comments

--- a/index.html
+++ b/index.html
@@ -127,15 +127,28 @@
                 </div>
               </li>
             </ul>
-            <div class="paginator news__paginator">Страница 1 из 7</div>
-            <ul class="paginator__list">
-              <li class="paginator__item">1</li>
-              <li class="paginator__item">2</li>
-              <li class="paginator__item">3</li>
-              <li class="paginator__item">4</li>
-              <li class="paginator__item">5</li>
-              <li class="paginator__item">6</li>
-              <li class="paginator__item">7</li>
+            <div class="paginator">Страница 1 из 7</div>
+              <ul class="paginator__list">
+              <li class="paginator__item">
+                <a href="#" class="paginator__link">1</a></li>
+              <li class="paginator__item">
+                <a href="#" class="paginator__link">2</a></li>
+              </li>
+              <li class="paginator__item">
+                <a href="#" class="paginator__link">3</a></li>
+              </li>
+              <li class="paginator__item">
+                <a href="#" class="paginator__link">4</a></li>
+              </li>
+              <li class="paginator__item">
+                <a href="#" class="paginator__link">5</a></li>
+              </li>
+              <li class="paginator__item">
+                <a href="#" class="paginator__link">6</a></li>
+              </li>
+              <li class="paginator__item">
+                <a href="#" class="paginator__link">7</a></li>
+              </li>
             </ul>
           </div>
         </section>
