--- a/services.html
+++ b/services.html
@@ -21,19 +21,19 @@
           <header class="header top-line__header">
             <div class="container header__container">
               <div class="header__col">
-                <a href="" class="logo">
+                <a href="./main.html" class="logo">
                   <img src="./img/logo-inner.png" alt="logo company" class="logo__img">
                 </a>
                 <nav class="menu">
                   <ul class="menu__list">
                     <li class="menu__item">
-                      <a href="./index.html" class="menu__link">Главная</a>
+                      <a href="./main.html" class="menu__link">Главная</a>
                     </li>
                     <li class="menu__item">
                       <a href="./services.html" class="menu__link">Услуги</a>
                     </li>
                     <li class="menu__item">
-                      <a href="#" class="menu__link">Отзывы</a>
+                      <a href="./reviews.html" class="menu__link">Отзывы</a>
                     </li>
                   </ul>
                 </nav>
@@ -41,7 +41,13 @@
               <div class="header__col header__col--allign-right">
                 <address class="contacts">
                   <a href="tel:+78007003030" class="contacts__phone">8 800 700 30 30</a>
-                  <div class="contacts__info">График работы</div>
+                  <div class="contacts__info">
+                    <a class="contacts__text">График работы</a>
+                    <div class="contacts__schedule">
+                      <div class="contacts__work">пн-вс: 09:00 - 20:00</div>
+                      <div class="contacts__dinner">Обед: 14:00-14:30</div>
+                    </div>
+                  </div>
                 </address> 
               </div>
             </div>
@@ -50,10 +56,10 @@
           <nav class="breadcrumbs">
             <ul class="breadcrumbs__list">
               <li class="breadcrumbs__item">
-                <a href="#" class="breadcrumbs__link">Главная</a>
+                <a href="./main.html" class="breadcrumbs__link">Главная</a>
               </li>
               <li class="breadcrumbs__item breadcrumbs__item--active">
-                <a href="#" class="breadcrumbs__link">Услуги</a>
+                <a href="./services.html" class="breadcrumbs__link">Услуги</a>
               </li>
             </ul>
           </nav>
@@ -171,19 +177,19 @@
       <footer class="footer services__footer">
         <div class="container footer__line">
           <div class="footer__col">
-            <a href="#" class="logo footer__logo inner__logo">
+            <a href="./main.html" class="logo footer__logo inner__logo">
               <img src="./img/logo-inner.png" alt="logo company" class="logo__img">
             </a>
             <nav class="menu footer__menu">
               <ul class="menu__list">
                 <li class="menu__item">
-                  <a href="./index.html" class="menu__link">Главная</a>
+                  <a href="./main.html" class="menu__link">Главная</a>
                 </li>
                 <li class="menu__item">
                   <a href="./services.html" class="menu__link">Услуги</a>
                 </li>
                 <li class="menu__item">
-                  <a href="#" class="menu__link">Отзывы</a>
+                  <a href="./reviews.html" class="menu__link">Отзывы</a>
                 </li>
               </ul>
             </nav>
@@ -193,22 +199,22 @@
               <ul class="footer__socials">
                 <li class="footer__social">
                   <a href="#" class="footer__social-link">
-                    <img src="./img/telegram.png" alt="telegram" class="footer__social-image">
+                    <div class="footer__social-tg"></div>
                   </a>
                 </li>
                 <li class="footer__social">
                   <a href="#" class="footer__social-link">
-                    <img src="./img/vk.png" alt="vk" class="footer__social-image">
+                    <div class="footer__social-vk"></div>
                   </a>
                 </li>
                 <li class="footer__social">
                   <a href="#" class="footer__social-link">
-                    <img src="./img/f.png" alt="fb" class="footer__social-image">
+                    <div class="footer__social-fb"></div>
                   </a>
                 </li>
                 <li class="footer__social">
                   <a href="#" class="footer__social-link">
-                    <img src="./img/in.png" alt="instagram" class="footer__social-image">
+                    <div class="footer__social-in"></div>
                   </a>
                 </li>
               </ul>
